kermeta_projects/fr.irisa.triskell.kermeta.io/src/test/resources/typechecher_tests/valid/SimpleCtrlStructs.kmt
/* $Id: SimpleCtrlStructs.kmt,v 1.2 2007-10-16 11:49:10 ftanguy Exp $ */

// Type checking on simple control stucts

package tctest;

require kermeta

class A {}

class B inherits A {}

class Test {

	operation test0() : Void is do
		a == b
	end
	
	operation test1() : Void is do
		a := if a == b then a else b end
	end
	
	operation test2() : Void is do
		b := if a == b then b end
	end

	operation test3() : Void is do
		b := if true then b else void end
	end
	
	operation test4() : Void is do
		from a := b
		until false
		loop
			b ?= a
		end
	end
	
	operation test5() : Void is do
		a ?= if a.getMetaClass == A then A else B end.new
	end
	
	operation test6() : Void is do
		b ?= b.getMetaClass.new
	end
	
	operation test7() : Void is do
	
		not a.equals(b)
		
		a.getMetaClass == B
		
	
		if not a.equals(b) and a.getMetaClass == B then
			var x : A init a
			a := b
			b ?= x
		
		end
	end
	
	attribute a : A
	attribute b : B

}

/* END OF FILE */